+formulaire demande de conges

--- a/src/templates/adminbase.html.twig
+++ b/src/templates/adminbase.html.twig
@@ -274,42 +274,21 @@
     </script>
     <!-- CongesForm -->
     <script>
-        // .attr({"required": true, "oninvalid": "setCustomValidity('Veuillez entrer un motif')", "oninput": "setCustomValidity('')"});
-        // .removeAttr("oninvalid").removeAttr("required");
-        // jQuery.extend(jQuery.validator.messages, {
-        //     required: "votre message",
-        //     remote: "votre message",
-        //     email: "votre message",
-        //     url: "votre message",
-        //     date: "votre message",
-        //     dateISO: "votre message",
-        //     number: "votre message",
-        //     digits: "votre message",
-        //     creditcard: "votre message",
-        //     equalTo: "votre message",
-        //     accept: "votre message",
-        //     maxlength: jQuery.validator.format("votre message {0} caractéres."),
-        //     minlength: jQuery.validator.format("votre message {0} caractéres."),
-        //     rangelength: jQuery.validator.format("votre message  entre {0} et {1} caractéres."),
-        //     range: jQuery.validator.format("votre message  entre {0} et {1}."),
-        //     max: jQuery.validator.format("votre message  inférieur ou égal à {0}."),
-        //     min: jQuery.validator.format("votre message  supérieur ou égal à {0}.")
-        // });
         $(document).ready(function () {
             if ($('select[name="conges_form[nature]"]').val() === "congés exceptionnels conventionnel")  {
-                $('input[name="conges_form[motif]"]').show();
+                $('input[name="conges_form[motif]"]').show().attr("required", "required");
                 $('label[for="conges_form_motif"]').show();
             } else {
-                $('input[name="conges_form[motif]"]').hide();
+                $('input[name="conges_form[motif]"]').hide().removeAttr("required");
                 $('label[for="conges_form_motif"]').hide();
             }
         });
         $('select[name="conges_form[nature]"]').on('change', function() {
             if ($(this).val() === "congés exceptionnels conventionnel")  {
-                $('input[name="conges_form[motif]"]').show();
+                $('input[name="conges_form[motif]"]').show().attr("required", "required");
                 $('label[for="conges_form_motif"]').show();
             } else {
-                $('input[name="conges_form[motif]"]').hide();
+                $('input[name="conges_form[motif]"]').hide().removeAttr("required");
                 $('label[for="conges_form_motif"]').hide();
             }
         });
