--- a/src/templates/admin/user/userform.html.twig
+++ b/src/templates/admin/user/userform.html.twig
@@ -4,7 +4,7 @@
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h5><a href="{{ path('app_admin_users') }}">{{ "backend.user.user_listing"|trans }}</a> >> Nouvel utilisateur </h5>
+                <h5><a href="{{ path('app_admin_users') }}">Liste des utilisateurs</a> >> Nouvel utilisateur </h5>
             </div>
         </div>
 
@@ -29,8 +29,8 @@
                         <div class="ln_solid"></div>
                         <div class="item form-group">
                             <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-                                <a class="btn btn-warning" href="{{ path('app_admin_users') }}">{{ "backend.user.cancel"|trans }}</a>
-                                <button type="submit" name="valider" class="btn btn-success">{{ "backend.user.register"|trans }}</button>
+                                <a class="btn btn-warning" href="{{ path('app_admin_users') }}">Annuler</a>
+                                <button type="submit" name="valider" class="btn btn-success">Enregistrer</button>
                             </div>
                         </div>
                         {{ form_end(userForm) }}
