--- a/src/templates/security/login.html.twig
+++ b/src/templates/security/login.html.twig
@@ -41,27 +41,29 @@
 					<form method="post">
 						<h1>Delko RH</h1>
 						<div>
-							<input type="text" value="{{ last_username }}" name="username" id="inputText" class="form-control" placeholder="Nom" required autofocus>
+							<input type="text" value="{{ last_username }}" name="email" id="inputText" class="form-control" placeholder="E-mail" required autofocus>
 						</div>
 						<div>
 							<input type="password" name="password" id="inputPassword" class="form-control" placeholder="Mot de passe" required>
 							<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 						</div>
-						<div>
-							<input type="checkbox" class="" name="_remember_me"><span>Se souvenir de moi</span>
+						<div style="margin-bottom: 18px">
+							<input type="checkbox" class="" name="_remember_me"><span>Se souvenir de moi (à faire)</span>
 						</div>
 						<div>
 							<button class="btn btn-success submit" href="index.html">Se connecter</button>
 							<a class="reset_pass" href="{{path('app_forgot_password_request')}}">Mot de passe perdu ?</a>
 						</div>
-
 						<div class="separator">
-							{# <p class="change_link">
-								{{ "backend.login.new_site"|trans }}
-								<a href="#signup" class="to_register">
-									{{ "backend.login.create_acount"|trans }}
-								</a>
-							</p> #}
+							{% if error %}
+								<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security', 'fr') }}</div>
+							{% endif %}
+{#							 <p class="change_link">#}
+{#								{{ "backend.login.new_site"|trans }}#}
+{#								<a href="#signup" class="to_register">#}
+{#									{{ "backend.login.create_acount"|trans }}#}
+{#								</a>#}
+{#							</p> #}
 
 							<div class="clearfix"></div>
 							<br/>
@@ -71,61 +73,57 @@
 								<p>
 									©{{ "now"|date("Y") }}
 									tous droits réservés
-									<a target="_blank" href="//example.com"> example.com </a>
+									<a target="_blank" href="https://www.delko.fr/"> delko.fr </a>
 								</p>
 								</p>
 							</div>
 						</div>
-
 						<div class="clearfix"></div>
-						{% if error %}
-							<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-						{% endif %}
 					</form>
 				</section>
 			</div>
-			<div id="register" class="animate form registration_form">
-				<section class="login_content">
-					<form>
-						<h1>
-							{{ "backend.login.create_acount"|trans }}</h1>
-						<div>
-							<input type="text" class="form-control" placeholder="Username" required=""/>
-						</div>
-						<div>
-							<input type="email" class="form-control" placeholder="Email" required=""/>
-						</div>
-						<div>
-							<input type="password" class="form-control" placeholder="Password" required=""/>
-						</div>
-						<div>
-							<a class="btn btn-default submit" href="index.html">Submit</a>
-						</div>
+{#			<div id="register" class="animate form registration_form">#}
+{#				<section class="login_content">#}
+{#					<form>#}
+{#						<h1>#}
+{#							{{ "backend.login.create_acount"|trans }}</h1>#}
+{#						<div>#}
+{#							<input type="text" class="form-control" placeholder="Username" required=""/>#}
+{#						</div>#}
+{#						<div>#}
+{#							<input type="email" class="form-control" placeholder="Email" required=""/>#}
+{#						</div>#}
+{#						<div>#}
+{#							<input type="password" class="form-control" placeholder="Password" required=""/>#}
+{#						</div>#}
+{#						<div>#}
+{#							<a class="btn btn-default submit" href="index.html">Submit</a>#}
+{#						</div>#}
 
-						<div class="clearfix"></div>
+{#						<div class="clearfix"></div>#}
 
-						<div class="separator">
-							<p class="change_link">{{ "backend.login.already_member"|trans }}
-								<a href="#signin" class="to_register">
-									{{ "backend.login.log_in"|trans }}
-								</a>
-							</p>
+{#						<div class="separator">#}
+{#							<p class="change_link">{{ "backend.login.already_member"|trans }}#}
+{#								<a href="#signin" class="to_register">#}
+{#									{{ "backend.login.log_in"|trans }}#}
+{#								</a>#}
+{#							</p>#}
 
-							<div class="clearfix"></div>
-							<br/>
-							<div>
-								<h1>
-									<i class="fa fa-paw"></i>
-									ADMIN PANEL</h1>
-								<p>©{{ "now"|date("Y") }}
-									{{ "backend.login.all_rights"|trans }}
-									<a target="_blank" href="//example.com">example.com<a/></p>
-								</p>
-							</div>
-						</div>
-					</form>
-				</section>
-			</div>
+{#							<div class="clearfix"></div>#}
+{#							<br/>#}
+{#							<div>#}
+{#								<h1>#}
+{#									<i class="fa fa-paw"></i>#}
+{#									ADMIN PANEL</h1>#}
+{#								<p>©{{ "now"|date("Y") }}#}
+{#									{{ "backend.login.all_rights"|trans }}#}
+{#									<a target="_blank" href="//example.com">example.com<a/></p>#}
+{#								</p>#}
+{#							</div>#}
+{#						</div>#}
+{#					</form>#}
+{#				</section>#}
+{#			</div>#}
 		</div>
 	</div>
 {% endblock %}
