--- a/src/templates/service/service.html.twig
+++ b/src/templates/service/service.html.twig
@@ -31,8 +31,8 @@
                             <table id="example" class="display table table-striped table-bordered dataminetables">
                                 <thead style="text-align:center">
                                 <th>Nom du service</th>
-                                <th>{{ "backend.user.modifier"|trans }}</th>
-                                <th>{{ "backend.user.delete"|trans }}</th>
+                                <th>Modifier</th>
+                                <th>Supprimer</th>
                                 </thead>
                                 <tbody>
                                 {% for service in services %}
