+envoi de mail de notif de congés

--- a/src/templates/adminbase.html.twig
+++ b/src/templates/adminbase.html.twig
@@ -293,7 +293,7 @@
                 $('input[name="conges_form[motif]"]').show().attr("required", "required");
                 $('label[for="conges_form_motif"]').show();
             } else {
-                $('input[name="conges_form[motif]"]').hide().removeAttr("required");
+                $('input[name="conges_form[motif]"]').hide().removeAttr("required").val(null);
                 $('label[for="conges_form_motif"]').hide();
             }
         });
@@ -302,7 +302,7 @@
                 $('input[name="conges_form[motif]"]').show().attr("required", "required");
                 $('label[for="conges_form_motif"]').show();
             } else {
-                $('input[name="conges_form[motif]"]').hide().removeAttr("required");
+                $('input[name="conges_form[motif]"]').hide().removeAttr("required").val(null);
                 $('label[for="conges_form_motif"]').hide();
             }
         });
