+contraintes salariés e-mail unique + email type

--- a/src/templates/emails/notif_demande_conges.html.twig
+++ b/src/templates/emails/notif_demande_conges.html.twig
@@ -1,6 +1,6 @@
 <h1>Nouvelle demande de congés</h1>
 
-<div style="display: flex; flex-direction: column; justify-content: left; font-size: 15px">
+<div style="font-size: 15px">
     <p>
         <strong> De : </strong> {{ prenom }} {{ nom }}
     </p>
