--- a/src/templates/reset_password/reset.html.twig
+++ b/src/templates/reset_password/reset.html.twig
@@ -1,19 +1,12 @@
-{% extends 'security/login.html.twig' %}
+{% extends 'base.html.twig' %}
 
-{% block title %}Reset your password
-{% endblock %}
-{% block bodyclass %}class="login"
-{% endblock %}
+{% block title %}Reset your password{% endblock %}
+
 {% block body %}
-	<div class="login_wrapper">
-		<div class="animate form login_form">
-			<section class="login_content">
-				<h1>Reset your password</h1>
-				{{ form_start(resetForm) }}
-				{{ form_row(resetForm.plainPassword) }}
-				<button class="btn btn-primary">Reset password</button>
-				{{ form_end(resetForm) }}
-			</section>
-		</div>
-	</div>
+    <h1>Reset your password</h1>
+
+    {{ form_start(resetForm) }}
+        {{ form_row(resetForm.plainPassword) }}
+        <button class="btn btn-primary">Reset password</button>
+    {{ form_end(resetForm) }}
 {% endblock %}
