--- a/src/templates/salarie/ajoutsalarie.html.twig
+++ b/src/templates/salarie/ajoutsalarie.html.twig
@@ -27,7 +27,7 @@
                         <div class="item form-group">
                             <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
                                 <a class="btn btn-warning" href="{{ path('app_salarie') }}">Annuler</a>
-                                <button type="submit" name="valider" class="btn btn-success"> Enregistrer </button>
+                                <button type="submit" onclick="return confirm('Êtes vous sûr de vouloir ajouter ce salarié ?\nUn e-mail lui sera envoyé afin afin qu&#145;il initialise son mot de passe')" name="valider" class="btn btn-success"> Enregistrer </button>
                             </div>
                         </div>
                         {{ form_end(salarieForm) }}
