--- a/src/templates/reset_password/request.html.twig
+++ b/src/templates/reset_password/request.html.twig
@@ -1,28 +1,22 @@
-{% extends 'security/login.html.twig' %}
+{% extends 'base.html.twig' %}
 
-{% block title %}Reset your password
-{% endblock %}
-{% block bodyclass %}class="login"{% endblock %}
+{% block title %}Reset your password{% endblock %}
+
 {% block body %}
-	{% for flashError in app.flashes('reset_password_error') %}
-		<div class="alert alert-danger" role="alert">{{ flashError }}</div>
-	{% endfor %}
-	<div class="login_wrapper">
-		<div class="form login_form">
-			<section class="login_content">
-				<h1>Reset password</h1>
-				{{ form_start(requestForm) }}
-				{{ form_row(requestForm.email) }}
-				<div>
-					<small>
-						Enter your email address and we we will send you a
-												                link to reset your password.
-					</small>
-				</div>
+    {% for flashError in app.flashes('reset_password_error') %}
+        <div class="alert alert-danger" role="alert">{{ flashError }}</div>
+    {% endfor %}
+    <h1>Reset your password</h1>
 
-				<button class="btn btn-primary">Send password reset email</button>
-				{{ form_end(requestForm) }}
-			</section>
-		</div>
-	</div>
+    {{ form_start(requestForm) }}
+        {{ form_row(requestForm.email) }}
+        <div>
+            <small>
+                Enter your email address and we we will send you a
+                link to reset your password.
+            </small>
+        </div>
+
+        <button class="btn btn-primary">Send password reset email</button>
+    {{ form_end(requestForm) }}
 {% endblock %}
