--- a/src/templates/reset_password/email.html.twig
+++ b/src/templates/reset_password/email.html.twig
@@ -1,9 +1,11 @@
-<h1>Bonjour, </h1>
+<h1>Bonjour {{ prenom }} {{ nom }},</h1>
 
-<p>Votre compte RH Delko a été créé, pour initialiser votre mot de passe, veuillez cliquer sur le lien ci-dessous</p>
-
+<p>Un responsable de service vous a ajouté sur RH Delko, pour initialiser votre compte veuillez cliquer sur le lien ci-dessous et choisir votre mot de passe.</p>
+<p>Vous pourrez ensuite vous connecter à RH Delko avec votre addresse e-mail et votre nouveau mot de passe.</p>
+<br />
 <a href="{{ url('app_reset_password', {token: resetToken.token}) }}">{{ url('app_reset_password', {token: resetToken.token}) }}</a>
+<br />
+<p>Ce lien expirera dans 1 jour.</p>
+<p>Si le lien est expiré, veuillez contacter le/la responsable RH.</p>
 
-<p>Ce lien expirera dans 1 jour</p>
-
-<p>Merci et à bientôt</p>
+<p>Merci et à bientôt !</p>
