--- a/src/templates/reset_password/reset.html.twig
+++ b/src/templates/reset_password/reset.html.twig
@@ -1,12 +1,17 @@
-{% extends 'base.html.twig' %}
+{% extends 'security/login.html.twig' %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}Initialisation du compte{% endblock %}
 
 {% block body %}
-    <h1>Reset your password</h1>
-
+<div class="login_wrapper">
+    <div class="animate form login_form">
+        <section class="login_content">
+    <h1>Veuillez choisir votre mot de passe</h1>
     {{ form_start(resetForm) }}
         {{ form_row(resetForm.plainPassword) }}
-        <button class="btn btn-primary">Reset password</button>
+        <button class="btn btn-primary">enregistrer</button>
     {{ form_end(resetForm) }}
+        </section>
+    </div>
+</div>
 {% endblock %}
