--- a/src/templates/adminbase.html.twig
+++ b/src/templates/adminbase.html.twig
@@ -334,4 +334,11 @@
 
         });
     </script>
+    <!-- increase readability of errors for initialisation  -->
+{#    <script>#}
+{#        $(document).ready(function () {#}
+{#            console.log("test ?");#}
+{#            $('.invalid-feedback').css("font-size", "16px");#}
+{#        });#}
+{#    </script>#}
 {% endblock %}
